Revision history for Run-Parts

0.02    

	Add POD encoding to make Test::Pod happy

	State that the test suite needs Test::Differences

0.01    Fri  7 Jun 20:26:57 CEST 2013

        Initial release. More or less a proof of concept.